Add Prisma format script and update schema relationships

--- a/utility/package.json
+++ b/utility/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
+    "prisma:format": "prisma format"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
