--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,12 +1,11 @@
 {
   "name": "point-issuer",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest",
-    "prepare": "husky install"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
